Added benchmark profile support to define easily benchmark settings and run it on several platform (default and scaleTest): see ./profiles/ Upgraded to marlin 0.3.1 Updated scripts to set the profile to use -Dmapbench.profile=...